--- a/trunk/roadmap/src/roadmap.1
+++ b/trunk/roadmap/src/roadmap.1
@@ -79,6 +79,10 @@ Show the boundaries of the maps index grid (a variant of the R-Tree index).
 This option is for debug purpose only.
 
 .TP
+\fB\-\-trip\fR
+Open the given tripname on startup.
+
+.TP
 \fB\-\-gps=\fIurl\fR\fR
 Use the specified GPS source. Two URL formats only are supported:
 "gpsd://\fIhost\fR/" (access the GPS through a gpsd server) and
