--- a/trunk/roadmap/AUTHORS
+++ b/trunk/roadmap/AUTHORS
@@ -2,3 +2,6 @@ roadmap - a street navigation system using the US Census maps and GPS
 ---------------------------------------------------------------------
 
 Pascal Martin (pascal.martin@iname.com) - Main developer
+Ehud Shabtai
+Steve Woodbridge
+Paul Fox
