fix references to the win32 cross toolchain.  it's arm-wince-mingw32ce, not arm-wince-mingw32.

--- a/roadmap/README
+++ b/roadmap/README
@@ -157,7 +157,7 @@ INSTALLATION
    is required.
 
    There is UNIX Makefile support for building the WinCE version of
-   RoadMap using the arm-wince-mingw32 cross-compiler toolchain,
+   RoadMap using the arm-wince-mingw32ce cross-compiler toolchain,
    available from http://cegcc.sourceforge.net, but support in the
    code for the toolchain is incomplete.  Working versions have all
    come from real Microsoft tools.
